--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -10,6 +10,7 @@ html
 
         title Ubold - Responsive Admin Dashboard Template
 
+        link(href='../plugins/custombox/css/custombox.css', rel='stylesheet')
         link(href='../assets/css/bootstrap.min.css' rel='stylesheet' type='text/css')
         link(href='../assets/css/icons.css' rel='stylesheet' type='text/css')
         link(href='../assets/css/style.css' rel='stylesheet' type='text/css')
@@ -575,6 +576,10 @@ html
                             span.clearfix
             // /Right-bar
             // END wrapper
+            // Modal
+
+            block modal
+            
             script.
                 var resizefunc = [];
             // jQuery
