--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -24,10 +24,10 @@ html
           form.form-horizontal.m-t-20(action='index.html')
             .form-group
               .col-12
-                input.form-control(type='text', required='', placeholder='Username')
+                input.form-control(type='text', required='', placeholder='Username', name='username')
             .form-group
               .col-12
-                input.form-control(type='password', required='', placeholder='Password')
+                input.form-control(type='password', required='', placeholder='Password', name='password')
             .form-group
               .col-6
                 .checkbox.checkbox-primary
