--- a/views/client/clients.pug
+++ b/views/client/clients.pug
@@ -7,10 +7,10 @@ block content
                 .card-box
                     .row
                         .col-sm-8
-                            form(role='form')
+                                //form(role='form')
                                 .form-group.contact-search.m-b-30
                                     input#search.form-control(type='text' placeholder='Buscar ...')
-                                    button.btn.btn-white(type='submit')
+                                    button#btn-search.btn.btn-white
                                         i.fa.fa-search
                         .col-sm-4
                             //- a.btn.btn-default.btn-md.waves-effect.waves-light.m-b-30(href='/add-client' data-animation='fadein' data-overlayspeed='200' data-overlaycolor='#36404a')
@@ -20,8 +20,8 @@ block content
                                 i.md.md-add
                                 |  Crear Cliente
                     .table-responsive                           
-                    if clients.length>0
-                        table.table.table-hover.mails.m-0.table.table-actions-bar
+                        if clients.length>0
+                        table#table.table.table-hover.mails.m-0.table.table-actions-bar
                             thead
                                 tr
                                     th N
@@ -29,12 +29,12 @@ block content
                                     th Apellidos
                                     th Telefono
                                     th Email
-                                    th Action
+                                    th Editar
                             tbody
                             - let i=1;
                             each client in clients
 
-                                tr
+                               tr
 
                                     td #{i++} 
                                     td #{client.name}
@@ -43,15 +43,16 @@ block content
                                     td
                                         a(href='#') #{client.email}
                                     td
-                                        .form-group
-                                            form(action='/delete-client' method='POST')
-                                                .button-list
-                                                    a.btn.btn-icon.waves-effect.waves-light.btn-primary(href='/edit-client/'+ client._id +'?edit=true')
-                                                        i.fa.fa-edit
-                                                    button.btn.btn-icon.waves-effect.waves-light.btn-danger
-                                                        i.fa.fa-remove  
-                    else  
-                        h1 No se tienen clientes registrados
+                                      form(action='/delete-client' method='POST')
+                                        .row
+                                            .col-6
+                                                a.btn.btn-icon.waves-effect.waves-light.btn-primary(href='/edit-client/'+ client._id +'?edit=true')
+                                                    i.fa.fa-edit
+                                            .col-6
+                                                button.btn.btn-icon.waves-effect.waves-light.btn-danger
+                                                    i.fa.fa-remove  
+                            else  
+                                h1 No se tienen clientes registrados
 
 block modal
     #custom-modal.modal-demo
@@ -96,4 +97,4 @@ block modal
                 button.btn.btn-danger.waves-effect.waves-light.m-l-10(onclick='Custombox.close();')
                     | Cancel
 
-
+    script(src="../assets/js/logical/clients.js")
