--- a/views/client/clients.pug
+++ b/views/client/clients.pug
@@ -94,7 +94,7 @@ block modal
                         | Actualizar
                     else
                         |Crear
-                button.btn.btn-danger.waves-effect.waves-light.m-l-10(onclick='Custombox.close();')
+                button.btn.btn-danger.waves-effect.waves-light.m-l-10(type='button' onclick='Custombox.close();')
                     | Cancel
 
-    script(src="../assets/js/logical/clients.js")
+    script(src="../assets/js-logical/filterTable.js")
