--- a/views/aparment/aparments.pug
+++ b/views/aparment/aparments.pug
@@ -32,12 +32,12 @@ block content
                                         th Estado
                                         th Editar
                                 //- tbody
-                                - let i=1;
-                                each aparment in aparments
+                                
+                                each aparment, i in aparments
 
                                     tr
 
-                                        td #{i++} 
+                                        td #{numerOfItem+i+1} 
                                         td #{'Por Ingresas'}
                                         td #{aparment.code}
                                         td #{aparment.price} 
@@ -55,71 +55,30 @@ block content
                             nav
                                 
                                 ul#pagination.pagination.pagination-split.justify-content-center
-                                    
-                                        li.page-item
-                                            a(class ='page-link', href='#', aria-label='Previous')
+
+                                        - let previousPageFront = (hasPreviousPage? "": "disabled")
+                                        li(class ='page-item '+ previousPageFront)
+                                            a(class ='page-link ', href='/aparments?page='+previousPage , aria-label='Previous')
                                                 span(aria-hidden='true') «
                                                 span.sr-only Previous
                                         
                                         - let j = 1;
-                                            
-                                        while j < 5 
-                                        li(class=("page-item active"))
-                                             a.page-link(href='/aparments?page='+j)
-                                                | #{j}
-                                        - j++
-                                              
-                                        li.page-item
-                                            a.page-link(href='#', aria-label='Next')
+                                        while j <= totalPagination 
+                                            - let resultTernario = (currentPage == j ? "active" : "");
+                                            li(class=("page-item "+ resultTernario ))
+                                                a.page-link(href='/aparments?page='+j)
+                                                    | #{j}
+                                            - j++
+
+                                        - let nextPageFront = (hasNextPage? "": "disabled");
+                                        li(class ='page-item '+ nextPageFront)
+                                            a(class = "page-link", href='/aparments?page='+nextPage , aria-label='Next')
                                                 span(aria-hidden='true') »
                                                 span.sr-only Next
                 
                         else  
                             h4 No se tienen Cuartos o Departamentos Registrados
                         
-//- block modal
-//-     #con-close-modal.modal.fade(tabindex='-1' role='dialog' aria-labelledby='myModalLabel' aria-hidden='true' style='display: none;')
-//-         .modal-dialog
-//-             .modal-content
-//-                 .modal-header
-//-                     h4.modal-title Agregar Cuarto o Departamento
-//-                     button.close(type='button' data-dismiss='modal' aria-hidden='true') ×
-//-                 .modal-body
-//-                     .row
-//-                         .col-md-12
-//-                             .form-group
-//-                                 label.control-label(for='field-1') Local
-//-                                 input#field-1.form-control(type='text' placeholder='Selecionar Local')
-//-                     .row
-//-                         .col-md-6
-//-                             .form-group
-//-                                 label.control-label(for='field-2') Codigo
-//-                                 input#field-2.form-control(type='text' placeholder='Completar el codigo por ejemplo: 201')
-//-                         .col-md-6
-//-                             .form-group
-//-                                 label.control-label(for='field-3') Precio
-//-                                 input#field-3.form-control(type='number' placeholder='Precio de cuarto o departamento')
-//-                     .row
-//-                         .col-md-4
-//-                             .form-group
-//-                                 label.control-label(for='field-4') City
-//-                                 input#field-4.form-control(type='text' placeholder='Boston')
-//-                         .col-md-4
-//-                             .form-group
-//-                                 label.control-label(for='field-5') Country
-//-                                 input#field-5.form-control(type='text' placeholder='United States')
-//-                         .col-md-4
-//-                             .form-group
-//-                                 label.control-label(for='field-6') Zip
-//-                                 input#field-6.form-control(type='text' placeholder='123456')
-//-                     .row
-//-                         .col-md-12
-//-                             .form-group.no-margin
-//-                                 label.control-label(for='field-7') Personal Info
-//-                                 textarea#field-7.form-control(placeholder='Write something about yourself')
-//-                 .modal-footer
-//-                     button.btn.btn-secondary.waves-effect(type='button' data-dismiss='modal') Close
-//-                     button#newUpdateAparment.btn.btn-info.waves-effect.waves-light(type='button') Save changes
 
 block modal
     #custom-modal.modal-demo
@@ -128,7 +87,7 @@ block modal
             span.sr-only Close
         h4.custom-modal-title Crear Departamento
         .custom-modal-text.text-left
-                //form(role='form',  method='post')
+            form(role='form', action=editMode ? '/edit-aparment':'/add-aparment' method='post')
                 .form-group
                 label(for='property')
                     | Propiedad
@@ -166,137 +125,8 @@ block modal
 
 
 
-    script.
-        //- import swal from 'sweetalert';
-
-        const btnNewUpdateAparment = document.getElementById('newUpdateAparment');
-        //const btnLoadAparment = document.getElementById('loadAparment');
-        
-        const createAparment = () => {
-            const code = document.getElementById('code').value;
-            const price = document.getElementById('price').value;
-          
-            if(code =='' || price == ''){
-                return;
-            }
-        
-            fetch('/add-aparment', {
-                method: 'POST', // *GET, POST, PUT, DELETE, etc.
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({code: code, price: price}) // body data type must match "Content-Type" header)
-                    })
-            .then(res =>{return res.text()})
-            .then(data =>{
-                console.log('Renato Caldas');
-                loadAparment();
-                
-                //- const body = document.querySelector('.widescreen');
-                //- body.classList.remove('modal-open');
-                //- body.style = '';
-                //- document.getElementById('con-close-modal').style.display = 'none';
-                //- document.querySelector('.modal-backdrop').remove('show');
-                  Custombox.close();
-                  swal({
-                    title: "Creado: Cuarto o Departamento",
-                    text: `Codigo: ${code} y Precio: S/.${price} `,
-                    icon: "success",
-                    button: "Ok",
-                    });
-            //-    alert('Renato Caldas');
-            });
-        };
-
-        const loadAparment = () => {
-            
-            fetch('/aparment-json', {
-                method: 'GET',
-                headers: {'Content-Type': 'application/json'},
-
-            })
-            .then(res =>{return res.json()})
-            .then(data =>{   
-                const table = document.getElementById("table");
-                const tableBody = document.querySelector('tbody');
-                console.log(data);
-                generateTable(table,data.aparments, tableBody);        
-
-             });
-         };
-         
-        function generateTable(table, data, tableBody) {
-            tableBody.innerHTML  ='';
-            let i = 0;
-            for (let element of data) {
-                let row = tableBody.insertRow();
-                //- for (key in element) {
-                //-     let cell = row.insertCell();
-                //-     let text = document.createTextNode(element[key]);
-                //-     cell.appendChild(text);
-                //- }
-                
-                let cellItem = row.insertCell();
-                let textItem = document.createTextNode(i+= 1);
-                cellItem.appendChild(textItem);
-
-                let cellLocal = row.insertCell();
-                let textLocal = document.createTextNode('Por Ingresas');
-                cellLocal.appendChild(textLocal);
-
-                let cellCode = row.insertCell();
-                let textCode = document.createTextNode(element.code);
-                cellCode.appendChild(textCode);
-
-                let cellPrice = row.insertCell();
-                let textPrice = document.createTextNode(element.price);
-                cellPrice.appendChild(textPrice);
-
-                let cellStatus = row.insertCell();
-                let textStatus = document.createTextNode('Por trabajar');
-                cellStatus.appendChild(textStatus);
-
-                let cellEdit = row.insertCell();
-
-                cellEdit.innerHTML = 
-                    `   <div class="row"> 
-                            <div class="col-6"> 
-                                <a class="btn btn-icon waves-effect waves-light btn-primary" href='/edit-aparment/'+ ${element._id} +'?edit=true'>
-                                    <i class="fa fa-edit"> </i>
-                                </a>
-                            </div>
-                            <div class="col-6"> 
-                                <button class="btn btn-icon waves-effect waves-light btn-danger"> 
-                                    <i class="fa fa-remove"></i>
-                                </button>
-                            </div>    
-                        </div>
-                    `
-            }
-        }
-         const loadPagination = () =>
-         {
-            let i =1;
-
-            const ul = document.getElementById("pagination");
-
-            for (i; i<= 10; i++)
-                {
-                ul.appendChild.innerHTML =
-                `<li class="page-item">
-                    <a class="page-link" href='/aparment?page=${i}'>${i}</a>
-                 </li>
-                `   
-                }
-         }
-
-        loadPagination();
-        btnNewUpdateAparment.addEventListener('click',createAparment);
-        //btnLoadAparment.addEventListener("click",loadAparment);
 
     script(src="../assets/js-logical/filterTable.js")
-    //- script(src="../plugins/sweet-alert2/sweetalert2.min.js")
-    //- script(src="../assets/pages/jquery.sweet-alert2.init.js")
     script(src="https://unpkg.com/sweetalert/dist/sweetalert.min.js")     
 
 
