--- a/views/error/500.pug
+++ b/views/error/500.pug
@@ -1,4 +1,3 @@
-doctype html
 html
   head
     meta(charset='utf-8')
@@ -6,26 +5,26 @@ html
     meta(name='description', content='A fully featured admin theme which can be used to build CRM, CMS, etc.')
     meta(name='author', content='Coderthemes')
     link(rel='shortcut icon', href='assets/images/favicon.ico')
-    title  ERROR 404
-    link(href='../assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
-    link(href='../assets/css/icons.css', rel='stylesheet', type='text/css')
-    link(href='../assets/css/style.css', rel='stylesheet', type='text/css')
-    script(src='../assets/js/modernizr.min.js')
+    title Ubold - Responsive Admin Dashboard Template
+    link(href='assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
+    link(href='assets/css/icons.css', rel='stylesheet', type='text/css')
+    link(href='assets/css/style.css', rel='stylesheet', type='text/css')
+    script(src='assets/js/modernizr.min.js')
   body
     .account-pages
     .clearfix
     .wrapper-page
       .ex-page-content.text-center
         .text-error
-          span.text-primary 4
+          span.text-primary 5
           i.ti-face-sad.text-pink
-          span.text-info 4
-        h2 Who0ps! #{pageTitle}
+          i.ti-face-sad.text-info
+        h2 Internal Server Error.
         br
-        p.text-muted This page cannot found or is missing.
-        p.text-muted Use the navigation above or the button below to get back and track.
+        p.text-muted
+          | Why not try refreshing your page? or you can contact 
+          a(href='#') support
         br
         a.btn.btn-default.waves-effect.waves-light(href='index.html')  Return Home
     script.
       var resizefunc = [];
-   
