integrando formato de moneda

--- a/views/error/500.pug
+++ b/views/error/500.pug
@@ -6,10 +6,10 @@ html
     meta(name='author', content='Coderthemes')
     link(rel='shortcut icon', href='assets/images/favicon.ico')
     title Ubold - Responsive Admin Dashboard Template
-    link(href='assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/icons.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/style.css', rel='stylesheet', type='text/css')
-    script(src='assets/js/modernizr.min.js')
+    link(href='../assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
+    link(href='../assets/css/icons.css', rel='stylesheet', type='text/css')
+    link(href='../assets/css/style.css', rel='stylesheet', type='text/css')
+    script(src='../assets/js/modernizr.min.js')
   body
     .account-pages
     .clearfix
