--- a/views/aparment/aparments.pug
+++ b/views/aparment/aparments.pug
@@ -12,35 +12,31 @@ block content
                                 button#btn-search.btn.btn-white
                                     i.fa.fa-search
                         .col-sm-4
-                            a.btn.btn-default.btn-md.waves-effect.waves-light.m-b-30(href='#custom-modal' data-plugin="custommodal" data-animation='fadein' data-overlayspeed='200' data-overlaycolor='#36404a')
+                            a.btn.btn-default.btn-md.waves-effect.waves-light.m-b-30(href='/add-aparment'  data-animation='fadein' data-overlayspeed='200' data-overlaycolor='#36404a')
                                 i.md.md-add
                                 |  Crear Cuarto o Departamento
-                            //- button.btn.btn-default.btn-md.waves-effect.waves-light.m-b-30(type='button' data-toggle='modal' data-target='#con-close-modal')
-                            //-     i.md.md-add
-                            //-     |  Crear Cuarto o Departamento
-                            //- button#loadAparment.btn.btn-info.waves-effect.waves-light(type='button') Cargar
-                            
                     .table-responsive                           
                         if aparments.length>0
                             table#table.table.table-hover.mails.m-0.table.table-actions-bar
                                 thead
                                     tr
                                         th N
-                                        th Local
+                                        th Nick del Local
                                         th Codigo
                                         th Precio
                                         th Estado
                                         th Editar
-                                //- tbody
+                                tbody
                                 
                                 each aparment, i in aparments
 
                                     tr
 
                                         td #{numerOfItem+i+1} 
-                                        td #{'Por Ingresas'}
-                                        td #{aparment.code}
-                                        td #{aparment.price} 
+                                        td #{aparment.propertyId.adressNickname}
+                                        td #{aparment.code} - Piso: #{aparment.floor}
+                                        - let numberFormat = new Intl.NumberFormat("en-US", {minimumFractionDigits:2}).format(+aparment.price);
+                                        td S/. #{numberFormat}
                                         td #{'Por trabajar'}
                                         td
                                             form(action='/delete-aparment' method='POST')
@@ -80,53 +76,7 @@ block content
                             h4 No se tienen Cuartos o Departamentos Registrados
                         
 
-block modal
-    #custom-modal.modal-demo
-        button.close(type='button' onclick='Custombox.close();')
-            span ×
-            span.sr-only Close
-        h4.custom-modal-title Crear Departamento
-        .custom-modal-text.text-left
-            form(role='form', action=editMode ? '/edit-aparment':'/add-aparment' method='post')
-                .form-group
-                label(for='property')
-                    | Propiedad
-                    span.text-danger *
-                input#property.form-control(type='text' name='property' parsley-trigger='change' required='' placeholder='Ingresar Propiedad', value=editMode ? ''+ client.name +'':'')
-                .form-group
-                label(for='code')
-                    | Codigo
-                    span.text-danger *
-                input#code.form-control(type='text' name='code' parsley-trigger='change' required='' placeholder='Ingresar Codigo', value=editMode ? ''+ client.lastName +'':'')
-                .form-group
-                label
-                    | Costo 
-                    span.text-danger *
-                div
-                    input#price.form-control(data-parsley-type='number' type='text' name='price' required='' data-parsley-minlength='1' placeholder='Ingresar Monto', value=editMode ? ''+ client.phone +'':'')
-                //- .form-group
-                //- label(for='email')
-                //-     | Email
-                //-     span.text-danger *
-                //- div
-                //- input#email.form-control(type='email' name='email' required='' parsley-type='email' placeholder='ingresar Email', value=editMode ? ''+ client.email+'':'')
-
-                .form-group
-                div
-                input(type='hidden', value=editMode ? ''+aparment._id+'':'' name='clientId')         
-
-                button#newUpdateAparment.btn.btn-default.waves-effect.waves-light(type='submit')
-                    if editMode
-                        | Actualizar
-                    else
-                        |Crear
-                button.btn.btn-danger.waves-effect.waves-light.m-l-10(type='button' onclick='Custombox.close();')
-                    | Cancel
-
-
-
-
     script(src="../assets/js-logical/filterTable.js")
-    script(src="https://unpkg.com/sweetalert/dist/sweetalert.min.js")     
+ 
 
 
